# privacypass

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: build.yml  ci.yml
benches/: amortized.rs  batched.rs  batched_p384.rs  batched_ristretto255.rs  benchmark.rs  private.rs  public.rs
src/: lib.rs
src/amortized_tokens/: mod.rs  request.rs  response.rs  server.rs
src/arbitrary_batched_tokens/: client.rs  mod.rs  request.rs  response.rs  server.rs
src/auth/: authenticate.rs  authorize.rs  mod.rs
src/batched_tokens/: client.rs  mod.rs  request.rs  response.rs  server.rs
src/batched_tokens_p384/: client.rs  mod.rs  server.rs
src/batched_tokens_ristretto255/: client.rs  mod.rs  server.rs
src/common/: errors.rs  extensions.rs  mod.rs  private.rs  store.rs
src/generic_tokens/: mod.rs  request.rs  response.rs  server.rs
src/private_tokens/: client.rs  mod.rs  request.rs  response.rs  server.rs
src/public_tokens/: client.rs  det_rng.rs  mod.rs  request.rs  response.rs  server.rs
src/test_utils/: mod.rs  nonce_store.rs  private_memory_store.rs  private_memory_stores.rs  public_memory_store.rs  public_memory_stores.rs
tests/: amortized_tokens.rs  arbitrary_batched_tokens.rs  batched_memory_stores.rs  batched_memory_stores_old.rs  batched_tokens.rs  batched_tokens_p384.rs  batched_tokens_ristretto255.rs  generic_tokens.rs  kat_amortized.rs  kat_arbitrary.rs  kat_batched.rs  kat_batched_p384.rs  kat_batched_ristretto255.rs  kat_batched_rp384.rs  kat_generic.rs  kat_private.rs  kat_public.rs  kat_public_metadata.rs  memory_stores.rs  private_memory_stores.rs  private_tokens.rs  private_vectors.json  public_memory_stores.rs  public_tokens.rs
tests/kat_vectors/: arbitrary_batched_tokens_privacypass.json  batched_p384_rs.json  batched_p384_vectors_privacypass.json  batched_ristretto255_rs.json  batched_ristretto255_vectors_privacypass.json  batched_vectors_privacypass.json  generic_rs.json  private_p384_rs.json  private_ristretto255_rs.json  private_vectors_privacypass.json  public_metadata_ts.json  public_rs.json  public_vectors.json  public_vectors_privacypass.json
