[package]
name = "privacypass"
version = "0.1.0"
edition = "2021"
description = "WIP implementation of Privacy Pass"
license = "MIT"
documentation = "https://docs.rs/privacypass"
repository = "https://github.com/raphaelrobert/privacypass"
readme = "README.md"
keywords = [
  "privacy pass",
  "privacypass",
  "privacy",
  "pass",
  "ietf privacypass",
]
categories = ["cryptography", "privacy"]

[dependencies]
async-trait = "0.1.56"
base64 = "0.21.0"
generic-array = "0.14.5"
rand = "0.8.5"
serde = "1"
sha2 = "0.10.2"
thiserror = "1"
tls_codec = "0.3.0"
tls_codec_derive = "0.3.0"
voprf = "0.5.0-pre.6"
p384 = { version = "0.13.0", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
blind-rsa-signatures = "0.15.0"
http = "0.2.8"
typenum = "1.15.0"
nom = "7"

[features]
default = []
kat = ["voprf/danger"]

[dev-dependencies]
privacypass = { path = ".", features = ["kat"] }
tokio = { version = "1.20.0", features = ["full"] }
criterion = { version = "0.5.0", features = ["async_futures", "async_tokio"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false

[patch.crates-io]
voprf = { git = "https://github.com/facebook/voprf", branch = "main" }
