[package]
name = "privacypass"
version = "0.2.0-pre.0"
edition = "2021"
description = "Implementation of Privacy Pass"
license = "MIT"
documentation = "https://docs.rs/privacypass"
repository = "https://github.com/raphaelrobert/privacypass"
readme = "README.md"
keywords = [
  "privacy pass",
  "privacypass",
  "privacy",
  "pass",
  "ietf privacypass",
]
categories = ["cryptography", "privacy"]

[dependencies]
async-trait = "0.1.56"
base64 = "0.22.0"
generic-array = "0.14.5"
rand = "0.8"
serde = "1"
sha2 = "0.10.2"
thiserror = "2"
tls_codec = { version = "0.4.2" }
tls_codec_derive = "0.4.2"
voprf = { version = "0.5", features = ["serde"] }
p384 = { version = "0.13.0", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
blind-rsa-signatures = "0.15.0"
http = "1"
typenum = "1.15.0"
nom = "8"
tokio = { version = "1.20.0", features = ["full"], optional = true }

[features]
default = []
kat = ["voprf/danger"]
test-utils = ["tokio"]

[dev-dependencies]
privacypass = { path = ".", features = ["kat", "test-utils"] }
futures = "0.3"
criterion = { version = "0.5.0", features = ["async_futures", "async_tokio"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
